# KR_RFP

./: .dockerignore  .editorconfig  .gcloudignore  .gitignore  .mcp.json  CLAUDE.md  HANDOVER.md  README.md  VAULT.md  WEB_DEPLOYMENT.md  docker-compose.yml
.claude/: settings.json  settings.web.json.sample
AS_BUILT/: 00_INDEX.md  AUDIT_STANDARD.md  FILE_CENSUS.md  LAYER1_ARCHITECTURE_DATA_DATAFLOWS.md  LAYER2_CODE_PROCESS_DECISIONS.md  LAYER3_UX_UI.md
audit/: 00_EXECUTIVE_SUMMARY.md  01_DOCUMENT_AUDIT.md  02_GAP_ANALYSIS.md  03_SCHEMA_DIFF.md  04_RISKS_DECISIONS_ROADMAP.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_cyc_kickoff_satellites.py  0003_cyc_cycle_safety.py  0004_norm_attribute_taxonomy.py  0005_eng_scenario_award_split.py  0006_perf_itrade_baseline.py  0007_bid_components.py  0008_eng_analysis_run.py  0009_eng_award_rec_type.py  0010_awd_award_versioned.py  0011_bid_transit_days.py  0012_cyc_engine_safeties.py  0013_cyc_engine_weight_preset.py  0014_ref_fiscal_period.py  0015_bid_line_fiscal_period.py  0016_bid_line_period_uniqueness.py  0017_auth_app_user.py  0018_backfill_commodity_client.py  0019_pilot_run.py  0020_eng_analysis_run_label.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/v1/: auth.py  awards.py  bids.py  cycles.py  documents.py  health.py  ingest.py  pilot_common.py  runs.py
backend/app/auth/: __init__.py  create_user.py  deps.py  models.py  security.py
backend/app/comms/: __init__.py  merge.py  render.py  resolvers.py  templates.py
backend/app/comms/templates/: award.txt  incomplete_bid.txt  invitation.txt  non_selection.txt  pba.txt  round_feedback.txt  template.txt
backend/app/core/: __init__.py
backend/app/core/audit/: __init__.py  events.py  guards.py  recorder.py  writer.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/db/: __init__.py  base.py  session.py  types.py
backend/app/core/errors/: __init__.py  handlers.py  taxonomy.py
backend/app/core/security/: __init__.py  deps.py  principal.py  rbac.py  tenant.py
backend/app/cycle/: __init__.py  loader.py  scope.py
backend/app/domain/: __init__.py
backend/app/domain/audit/: __init__.py  models.py
backend/app/domain/awd/: __init__.py  models.py  read.py  service.py
backend/app/domain/bid/: __init__.py  bid_ingester.py  legacy_adapter.py  models.py  period_fanout.py  template_generator.py  template_preset.py  template_schema.py
backend/app/domain/cyc/: __init__.py  models.py
backend/app/domain/eng/: __init__.py  models.py  read.py  runner.py
backend/app/domain/norm/: __init__.py  models.py
backend/app/domain/perf/: __init__.py  models.py
backend/app/domain/ref/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/engine/: README.md  __init__.py  allocation.py  formulas.py  guards.py  interface.py  scoring.py  stub.py  v3.py
backend/app/fiscal/: __init__.py  calendar.py
backend/app/fiscal/data/: kroger_fiscal_periods.csv
backend/app/output/: __init__.py  booking_guide.py  capacity_check.py  formatting.py  post_award_doc.py  scenario_workbook.py  synthetic.py  types.py
backend/app/pilot/: __init__.py  backfill_runs.py  deliverables.py  flex_ingest.py  models.py  run_db.py  run_repo.py  service.py  setup_ingest.py  setup_template.py  status.py  synthetic.py  vault.py
backend/demo/: run_cycle_demo.py
backend/rehearsal/: synthetic_fill.py
backend/rfp_mcp/: __init__.py  rehydrate.py  rfp_pilot_server.py
backend/scripts/: potato_legacy_dryrun.py
backend/tests/: conftest.py  test_cleanroom_import.py  test_health.py  test_migrations_roundtrip.py  test_tenant_isolation.py
backend/tests/api/: __init__.py  conftest.py  test_alignment.py  test_auth.py  test_bids.py  test_comms.py  test_cors.py  test_downloads.py  test_finalize.py  test_post_award.py  test_runs.py  test_strategy.py  test_version_save.py
backend/tests/audit/: test_commodity_client_backfill.py  test_decision_events.py
backend/tests/awd/: __init__.py  test_award_read.py  test_post_award_versioning.py
backend/tests/bid/: __init__.py  synthetic.py  test_capacity_persist.py  test_capacity_round_trip.py  test_completeness_and_guards.py  test_legacy_resilience.py  test_period_fanout.py  test_period_import.py  test_round_trip.py
backend/tests/comms/: test_formulas.py  test_merge.py  test_render.py
backend/tests/engine/: golden_expectations.json  golden_fixture.py  test_engine_golden.py  test_engine_invariants.py  test_engine_single_round.py  test_engine_stub.py  test_formulas.py  test_input_manifest.py  test_runner_incumbent.py
backend/tests/fiscal/: test_calendar.py
backend/tests/mcp/: test_server_imports.py
backend/tests/output/: test_capacity_check.py  test_capacity_tab.py  test_line_price.py
backend/tests/pilot/: __init__.py  test_deliverables.py  test_pilot_cycle_e2e.py  test_pilot_setup.py  test_run_isolation.py  test_run_persistence.py  test_run_repo.py  test_vault_autopush.py
backend/tests/ref/: __init__.py  test_fiscal_period_table.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
infra/: .env.example  README.md  docker-compose.yml
mcp/: .mcp.json  README.md
project/: 00_PROJECT_CHARTER.md  (+12 more)
(+195 files in other folders)
