[project]
name = "kr-rfp-backend"
version = "0.1.0"
description = "Kroger Produce RFP / Sourcing — system-of-record backend (FastAPI + SQLAlchemy + Alembic)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openpyxl>=3.1",        # bid intake module: owned-template xlsx generation + ingest (D20)
    "passlib[argon2]>=1.7",  # web console auth: argon2 password hashing (constant-time verify)
    "pyotp>=2.9",            # web console auth: TOTP 2FA (provisioning URI + verify)
    "pyjwt>=2.8",            # web console auth: signed session JWT in the kr_session cookie
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",      # CI runs `pytest --cov=app` (the test job)
    "mcp>=1.0",             # the MCP SDK — tests/mcp imports `mcp.server.fastmcp` (rfp_mcp server)
    "httpx>=0.27",          # required by fastapi.testclient (health smoke test)
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# ruff — format + lint
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008: `Depends(...)` in argument defaults is the canonical FastAPI dependency idiom.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# mypy — typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_errors = true

# openpyxl / pyxlsb ship no type stubs; the bid intake module's file IO uses them. Treat them as
# untyped imports (our own code around the boundary stays strictly checked) — narrower than
# ignore_errors, which we reserve for generated/migration code.
[[tool.mypy.overrides]]
module = ["openpyxl.*", "pyxlsb.*"]
ignore_missing_imports = true

# passlib ships no type stubs (the auth password-hash helpers use it). Treat it as an untyped
# import; our wrappers (app/auth/security.py) cast its results back to concrete types.
[[tool.mypy.overrides]]
module = ["passlib.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest — markers; integration tests need a real Postgres
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests that require a real Postgres database (deselect with -m 'not integration')",
]
